# bare

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  GIT_WORKFLOW.md  LIVE_TRADING_GUIDE.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_1_TEST_REPORT.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_7B2_SIMD_FINDINGS.md  PHASE_7B_ULTRA_OPTIMIZATIONS.md  QUICK_START.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: arbitrage_bench.rs  detector_bench.rs  fixed_point_bench.rs  simd_bench.rs
docs/: BATCH_ORDERS_CRITICAL.md  BINARY_ARBITRAGE.md  OPTIMIZATION_CHECKLIST.md  PHASE_4_PLAN.md  RUST_HFT_ROADMAP.md
docs/architecture/: ADR-001-rust-simd-for-hft.md
examples/: binary_arbitrage_scanner.rs  circuit_breaker_demo.rs  crypto_updown_markets.rs  detect_arbitrage.rs  full_trading_bot.rs  live_arbitrage_detector.rs  live_websocket_test.rs  websocket_arbitrage.rs
src/: lib.rs
src/clob/: client.rs  eip712.rs  executor.rs  mod.rs  nonce_manager.rs
src/config/: mod.rs
src/core/: mod.rs  redemption.rs
src/core/arbitrage/: detector.rs  mod.rs  simd_detector.rs
src/core/execution/: mod.rs
src/core/risk/: circuit_breaker.rs  mod.rs  position_tracker.rs
src/services/: mod.rs
src/services/polymarket/: mod.rs
src/services/websocket/: manager.rs  mod.rs  polymarket_ws.rs
src/strategies/: binary_arbitrage.rs  crypto_updown.rs  mod.rs
src/types/: config.rs  market.rs  mod.rs  order.rs  trade.rs
src/utils/: fixed_point.rs  mod.rs
tests/: config_test.rs  phase1_validation.rs
(+2 files in other folders)
